tests/paczka1/fuzzy1/29056209.err
Error in line 1: S676 A549 50,9
Error in line 5: S676 S676 29,5
Error in line 10: rLoRWD7 A549 32,2
Error in line 17: rLoRWD7 S676 76,9
Error in line 21: S676 A120 64,70
Error in line 15: H1UgS S676 351,4
Error in line 20: rLoRWD7 A988 54,0
Error in line 27: S676 A988 25,4
Error in line 32: 6u85 A549 14,3
Error in line 31: Itidar2 A549 24,0
